# assistant-from-scratch

./: .gitignore  README.md  pyproject.toml
agents/: __init__.py
agents/echo/: agent.py
agents/openai/: agent.py
cli/: __init__.py  main.py
config/: settings.py
core/: base_agent.py  base_tool.py  logging.py  memory.py  registry.py
frameworks/: __init__.py
frameworks/openai_sdk/: agent.py
scripts/: build_index.py  download_papers.py  process_papers.py
tests/: test_echo_agent.py  test_memory.py  test_openai_sdk_agent.py  test_redis_memory.py
tools/: browse.py  delegate_task.py  internet_search.py  sql_query.py  vector_search.py
