[project]
name = "assistant"
description = "Experimental AI assistant playground"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

dependencies = [
  "click>=8.3.0,<9.0.0",
  "fastapi>=0.121.0,<0.122.0",
  "uvicorn>=0.38.0,<0.39.0",
  "redis>=7.0.1,<8.0.0",
  "httpx>=0.28.1,<0.29.0",
  "pydantic>=2.12.4,<3.0.0",
  "pytest>=8.4.2,<9.0.0",
  "python-dotenv>=1.2.1,<2.0.0",
  "aioredis>=2.0.0,<3.0.0",
  "pydantic-settings>=2.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
